# CorgiECS

./: CMakeLists.txt  README.md
include/corgi/ecs/: Component.h  ComponentPool.h  ComponentPools.h  Entities.h  Entity.h  Layer.h  Scene.h  System.h  Systems.h
src/: CMakeLists.txt  Component.cpp  Entities.cpp  Scene.cpp
tests/: CMakeLists.txt
tests/unit/: TestECS.cpp  TestEntity.cpp
